Remove optional query parameters from gate delete
