# samples/java/src/main/java/depotlifecycle/repositories/GateDeleteRequestRepository.java
@@ -1,6 +1,7 @@
 package depotlifecycle.repositories;
 
 import depotlifecycle.domain.GateDeleteRequest;
+import depotlifecycle.domain.Party;
 import io.micronaut.data.annotation.Repository;
 import edu.umd.cs.findbugs.annotations.NonNull;
 import io.micronaut.data.repository.CrudRepository;
@@ -10,5 +11,5 @@ import java.time.ZonedDateTime;
 
 @Repository
 public interface GateDeleteRequestRepository extends CrudRepository<GateDeleteRequest, Long> {
-    boolean existsByAdviceNumberAndUnitNumberAndType(@NotNull @NonNull String adviceNumber, @NotNull @NonNull String unitNumber, @NotNull @NonNull String type, @NotNull @NonNull ZonedDateTime activityTime);
+    boolean existsByDepotAndAdviceNumberAndUnitNumber(@NotNull @NonNull Party depot, @NotNull @NonNull String adviceNumber, @NotNull @NonNull String unitNumber);
 }
